portability and usability

--- a/FrontEnd/src/app/views/company-assets/mining-zone-create.component.html
+++ b/FrontEnd/src/app/views/company-assets/mining-zone-create.component.html
@@ -73,7 +73,7 @@
           </div>
           <div class="card-footer">
             <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o" ></i> Salvar</button>
-            <button type="button" class="btn btn-sm btn-danger" (click)="reset()"><i class="fa fa-ban"></i> Apagar</button>
+            <button type="button" class="btn btn-sm btn-danger" (click)="reset()"><i class="fa fa-ban"></i> Limpar</button>
           </div>
         </form>
         </div>
