--- a/FrontEnd/src/app/views/company-assets/equipment.component.html
+++ b/FrontEnd/src/app/views/company-assets/equipment.component.html
@@ -33,6 +33,8 @@
         </div>
         <div class="card-footer">
           <button type="submit" class="btn btn-sm btn-primary"><i class="fa fas fa-search"></i> Pesquisar</button>
+          <a type="button" class="btn btn-sm btn-primary" [routerLink]="['../equipment-create']" ><i class="fa far fa-file"></i> Novo</a>
+
         </div>
       </div>
      
@@ -49,20 +51,20 @@
           <tr>
             <th scope="row">1</th>
             <td>ZM-BG</td>
-            <td>Ferro</td>
-            <td>js</td>
+            <td>Escavadeira</td>
+            <td>OK</td>
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>ZMY-SKD</td>
-            <td>Thornton</td>
-            <td>@fat</td>
+            <td>XMS-343</td>
+            <td>Escavadeira</td>
+            <td>Em manutenção</td>
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>ZMY-SKD</td>
-            <td>TKS</td>
-            <td>@fat</td>
+            <td>XMS-344</td>
+            <td>Escavadeira</td>
+            <td>OK</td>
           </tr>
         </tbody>
       </table>
