--- a/FrontEnd/src/app/views/company-assets/equipment-create.component.html
+++ b/FrontEnd/src/app/views/company-assets/equipment-create.component.html
@@ -12,21 +12,20 @@
             <div class="form-group row">
               <label class="col-md-3 col-form-label" for="text-input">Tipo</label>
               <div class="col-md-9">
-                <input type="text" id="text-input" name="text-input" class="form-control" >
-              </div>
+                  <select id="select1" name="select1"  class="form-control">
+                      <option value="0">Por favor, selecione</option>
+                      <option value="1">Caminhão</option>
+                      <option value="2">Escavadeira</option>
+                  </select>        
+                     </div>            
             </div>
             <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="text-input">Identificação</label>
+              <label class="col-md-3 col-form-label" for="text-input">Nome</label>
               <div class="col-md-9">
                 <input type="text" id="text-input" name="text-input" class="form-control" >
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="text-input">Status</label>
-              <div class="col-md-9">
-                <input type="text" id="text-input" name="text-input" class="form-control" >
-              </div>
-            </div>
+           
            
                       
           </form>
