--- a/FrontEnd/src/app/containers/default-layout/default-layout.component.html
+++ b/FrontEnd/src/app/containers/default-layout/default-layout.component.html
@@ -3,8 +3,7 @@
   [fixed]="true"
   [navbarBrandFull]="{src: 'assets/img/brand/sga-logo.svg', width: 89, height: 25, alt: 'CoreUI Logo'}"
   [navbarBrandMinimized]="{src: 'assets/img/brand/onlyicon.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
-  [sidebarToggler]="'lg'"
-  [asideMenuToggler]="'-'">
+  [sidebarToggler]="false" [asideMenuToggler]="false" [mobileAsideMenuToggler]="false" >
  
   <ul class="nav navbar-nav ml-auto">
   
