--- a/FrontEnd/src/app/views/base/ocurrences/ocurrences.component.html
+++ b/FrontEnd/src/app/views/base/ocurrences/ocurrences.component.html
@@ -3,59 +3,7 @@
   
     <div class="row">
       <div class="container-fluid">
-        <div class="card">
-          <div class="card-header">
-            <strong>Pesquisar Ocorrências</strong>
-          </div>
-          <form [formGroup] = "searchForm" (ngSubmit)="onSubmit(searchForm.value)" >
-  
-          <div class="card-body">
-              
-              <div class="form-group row">
-                <label class="col-md-3 col-form-label" for="text-input">Data</label>
-                <div class="col-md-9">
-                  <input type="text" id="text-input" name="text-input" formControlName = "id" class="form-control" type="date" placeholder="data">
-                </div>
-                
-              </div>
-              <div class="form-group row">
-                <label class="col-md-3 col-form-label" for="text-input">Tipo</label>
-                <div class="col-md-9">
-                    <select id="select1" name="select1"  class="form-control">
-                        <option value="0">Todos</option>
-                        <option value="1">Tremor de Terra</option>
-                        <option value="2">Quedas, Tombamentos e rolamentos</option>
-                        <option value="3">Deslizamentos</option>
-                        <option value="4">Corridas de Massa</option>
-                       <option value="5">Erosão de Margem Fluvial</option>
-
-                    </select>
-                </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-md-3 col-form-label" for="text-input">Nível</label>
-                <div class="col-md-9">
-                    <select id="select1" name="select1"  class="form-control">
-                        <option value="0">Todos</option>
-                        <option value="1">Vigilância</option>
-                        <option value="2">Observação</option>
-                        <option value="3">Atenção</option>
-                        <option value="4">Alerta</option>
-                       <option value="5">Alerta  Máximo</option>
-
-                    </select>
-                </div>
-              </div>
-              
-                                    
-          </div>
-          <div class="card-footer">
-            <button type="submit" class="btn btn-sm btn-primary"><i class="fa fas fa-search"></i> Pesquisar</button>
-            <a type="button" class="btn btn-sm btn-primary" [routerLink]="['../ocurrences-create']" ><i class="fa far fa-file"></i> Novo</a>
-
-          </div>
-        </form>
-        </div>
+        
      
   
         <div class="table-responsive">
@@ -65,41 +13,17 @@
               <th scope="col">Identificação</th>
               <th scope="col">Tipo</th>
               <th scope="col">Nível</th>
-              <th scope="col">Ações</th>
             </tr>
           </thead>
           <tbody >
-            <tr >
-              <td>OCO123</td>
-              <td>Tremor de Terra</td>
-              <td>Atenção</td>
-              <td><a type="button" class="btn btn-sm btn-primary" [routerLink]="['../mining-zones/' + miningZoneId]" ><i class="fa far fa-edit"></i></a>
-                
-                  
-                </td>
+            <tr *ngFor="let ocurrence of ocurrenceList" >
+              <td>{{ocurrence.identificacao}}</td>
+              <td>{{ocurrence.tipo}}</td>
+              <td>{{ocurrence.nivel}}</td>
+            
     
             </tr>
-            <tr >
-                <td>OCO123</td>
-                <td>Corridas de Massa</td>
-                <td>Alerta</td>
-                <td><a type="button" class="btn btn-sm btn-primary" [routerLink]="['../mining-zones/' + miningZoneId]" ><i class="fa far fa-edit"></i></a>
-                  
-                    
-                  </td>
-      
-              </tr>
-              <tr >
-                <td>OCO123</td>
-                <td>Quedas, Tombamentos e rolamentos</td>
-                <td>Alerta  Máximo</td>
-                <td><a type="button" class="btn btn-sm btn-primary" [routerLink]="['../mining-zones/' + miningZoneId]" ><i class="fa far fa-edit"></i></a>
-                  
-                    
-                  </td>
-      
-              </tr>
-            
+         
           </tbody>
         </table>
       </div>
