--- a/FrontEnd/src/app/views/base/monitor-dam/monitor-dam.component.html
+++ b/FrontEnd/src/app/views/base/monitor-dam/monitor-dam.component.html
@@ -7,13 +7,16 @@
           </div>
           <div class="card-body">
             <div class="col-sm-6 ">
-              Data e Hora: 26/03/2020 20:02:01 
+              Local: {{weatherData?.name}}, {{weatherData?.state}}
             </div>
             <div class="col-sm-6 ">
-              Temperatura: 26º
+              Data e Hora: {{weatherData?.data[0].date_br}}
             </div>
             <div class="col-sm-6 ">
-              Precipitação: 8%
+              Temperatura: Min {{weatherData?.data[0].temperature.min}} º, Max  {{weatherData?.data[0].temperature.max}}º
+            </div>
+            <div class="col-sm-6 " >
+              Descrição: {{weatherData?.data[0].text_icon.text.pt}}
             </div>
   
           </div>
@@ -25,15 +28,14 @@
             </div>
             <div class="card-body">
               <div class="col-lg-12">
-                <progressbar class="progress-bar progress-bar-striped progress-bar-animated" [value]="dynamic" [max]="max" [type]="type">
-                   <i *ngIf="showWarning">{{dynamic}} %</i>
-                </progressbar>
-  
+            
+                <progressbar [value]="setDynamic(waterSensorData?.level)"   [striped]="true" max="100" [animate]="true">{{waterSensorData?.level}}% </progressbar>
               </div>
               <br>  
             </div>
           </div>
   
+
           <div class="card">
             <div class="card-header">
               Vibração
@@ -44,37 +46,14 @@
                   <tr>
                     <th>Date do Registro</th>
                     <th>Intensidade</th>
-                    <th>Status</th>
+                    
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>26/05/2020 08:04:11</td>
-                    <td>10</td>
-                    <td>
-                      <span class="badge badge-danger">Perigo</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>26/05/2020 08:04:11</td>
-                    <td>10</td>
-                    <td>
-                      <span class="badge badge-danger">Perigo</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>26/05/2020 08:04:11</td>
-                    <td>10</td>
-                    <td>
-                      <span class="badge badge-danger">Perigo</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>26/05/2020 08:04:11</td>
-                    <td>10</td>
-                    <td>
-                      <span class="badge badge-danger">Perigo</span>
-                    </td>
+                  <tr *ngFor="let vibrationData of vibrationDataList">
+                   <td>{{vibrationData.date}}</td>
+                   <td>{{vibrationData.intensity}}</td>
+                    
                   </tr>
                   
                 </tbody>
